# lettris

./: .env  .gitignore  Cargo.toml  README.md  TODO.md  diesel.toml
.cargo/: config.toml
docker/: .env  docker-compose.yml
migrations/: up.sql
migrations/2025-03-02-021435_create/: up.sql
migrator/: up.sql
sdk/: Cargo.toml
sdk/src/: errors.rs  lib.rs  traits.rs
sdk/src/models/: bill.rs  consumers.rs  consumers_impl.rs  discount.rs  mod.rs  person.rs  sql_model.rs  sql_model_impl.rs  tags.rs  tests.rs
sdk/src/models/discounts/: discount_models.rs  mod.rs
sdk/src/models/goods/: good_list.rs  good_models.rs  good_property.rs  mod.rs
sdk/src/models/users/: consumers.rs  consumers_impl.rs  mod.rs
src/: main.rs  tracer.rs
