[package]
name = "lettris"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    ""
]

[dependencies]
kafka = "0.10.0"
lettre = { version = "0.11.14", features = ["tokio1-rustls-tls"] }
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["local-time"] }
