[package]
name = "lettris"
edition = "2024"

[workspace]
members = [
    "sdk"
]
[workspace.package]
version = "0.1.0"
rust-version = "1.85.0"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
lettris-sdk = { workspace = true }

[workspace.dependencies]
arrayvec = { version = "0.7.6", features = ["serde"] }
lettre = { version = "0.11.14", features = ["tokio1-native-tls"] }
once_cell = "1.20.3"
rdkafka = "0.37.0"
rust_decimal = "1.36.0"
serde = { version = "1.0.218", features = ["derive"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["local-time"] }
lettris-sdk = { path = "./sdk" }
hashbrown = { version = "0.15.2", features = ["serde"] }
