[package]
name = "lettris"
edition = "2024"

[workspace]
members = [
    "sdk"
]
[workspace.package]
version = "0.1.0"
rust-version = "1.85.0"

[dependencies]
axum = "0.8.1"
axum-server = { version = "0.7.1", features = ["tokio-rustls"] }
# bb8 = "0.8.6"
# diesel = { workspace = true }
# diesel-async = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
lettris-sdk = { workspace = true }
uuid = { version = "1.15.1", features = ["atomic", "serde"] }
dotenv = "0.15.0"

[workspace.dependencies]
arrayvec = { version = "0.7.6", features = ["serde"] }
hashbrown = { version = "0.15.2", features = ["serde"] }
# diesel = { version = "2.2.7" }
# diesel-async = { version = "0.5.2", features = ["bb8", "mysql"] }
lettre = { version = "0.11.14", features = ["tokio1-native-tls"] }
lettris-sdk = { path = "./sdk" }
once_cell = "1.20.3"
rdkafka = "0.37.0"
rust_decimal = { version = "1.36.0", features = ["db-diesel-mysql"] }
rust_decimal_macros = "1.36.0"
serde = { version = "1.0.218", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["chrono", "mysql", "runtime-tokio-native-tls"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["local-time"] }
