[package]
name = "lettris-sdk"
version = { workspace = true }
edition = "2024"

[dependencies]
# diesel = { workspace = true }
# diesel-async = { workspace = true }
hashbrown = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
